// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component sanity matches default snapshot 1`] = `
<table>
  <thead>
    <tr>
      <th
        colspan="2"
      >
        The table header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        The table body
      </td>
      <td>
        with two columns
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="2"
      >
        The table footer
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Table component sanity matches themed snapshot 1`] = `
.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <table>
    <thead>
      <tr>
        <th
          colspan="2"
        >
          The table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          The table body
        </td>
        <td>
          with two columns
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td
          colspan="2"
        >
          The table footer
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
